# autosuspend

./: .coveragerc  .editorconfig  .gitignore  .pydocstyle  .readthedocs.yaml  .releaserc.json  .travis.yml  AGENTS.md  README.md  VERSION  autosuspend  autosuspend-detect-suspend.service  autosuspend-logging.conf  autosuspend.conf  autosuspend.py  autosuspend.service  cosmic-ray.toml  package-lock.json  package.json  pylintrc  pyproject.toml  readthedocs.yml  renovate.json  requirements-check.txt  requirements-doc.txt  setup.cfg  setup.py  sleepd.conf  sleepd.py  sleepdebug.py  test_autosuspend.py  test_integration.py  tox.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml
data/: autosuspend-detect-suspend.service  autosuspend-logging.conf  autosuspend.conf  autosuspend.service
doc/: ext_autosuspend.py
doc/source/: api.rst  available_checks.inc  available_checks.rst  available_wakeups.inc  available_wakeups.rst  changelog.md  changelog.rst  conf.py  configuration_file.inc  configuration_file.rst  debugging.rst  description.inc  external_command_activity_scripts.rst  faq.rst  generated_changelog.md  index.rst  installation.rst  man_command.rst  man_config.rst  manpages.rst  old_changelog.rst  options.rst  support.rst  usecases.rst  (+2 more)
test_data/: dont_suspend.conf  would_suspend.conf
tests/: __init__.py  conftest.py  test_autosuspend.py  test_checks.py  test_checks_activity.py  test_checks_command.py  test_checks_config.py  test_checks_ical.py  test_checks_json.py  test_checks_kodi.py  test_checks_linux.py  test_checks_logs.py  test_checks_mpd.py  test_checks_smb.py  test_checks_stub.py  test_checks_systemd.py  test_checks_util.py  test_checks_wakeup.py  test_checks_xorg.py  test_checks_xpath.py  test_config.py  test_ext_autosuspend.py  test_integration.py  test_util.py  test_util_ical.py  test_util_systemd.py  test_util_xorg.py  utils.py
(+68 files in other folders)
